# src/types/dto/auth.dto.ts
@@ -1,0 +1,6 @@
+import { IUser } from "../common";
+
+export interface createAccountDto extends IUser {
+  password: string;
+  confirmPassword: string
+}
