# src/utils/schemas/auth.schemas.ts
@@ -1,0 +1,16 @@
+import { z } from "zod";
+
+const createAccountSchema = z.object({
+  body: z.object({
+    firstName: z.string(),
+    lastName: z.string(),
+    email: z.string().email(),
+    password: z.string().min(6),
+    confirmPassword: z.string(),
+  }).refine(data => data.password === data.confirmPassword, {
+    message: "Passwords do not match",
+    path: ["confirmPassword"]
+  })
+});
+
+export default createAccountSchema;
